# json-cli

./: Cargo.toml  README.md
src/: error.rs  file_path_completer.rs  lib.rs  main.rs  util.rs
src/cli/: args.rs  commands.rs  mod.rs
src/config/: mod.rs
src/copy_file/: mod.rs
src/core/: copy.rs  json.rs  mod.rs
src/util/: mod.rs
