[package]
name = "jh"
version = "0.1.0"
description = "A simple JSON cli helper"
edition = "2021"

[dependencies]
serde_json_path = "0.7.1"
clap = { version = "4.5.23", features = ["derive"] }
serde_json = { version = "1.0.134", features = ["preserve_order"] }
log = "0.4.22"
serde = { version = "1.0.216", features = ["derive"] }
env_logger = "0.11.6"
regex = "1.11.1"
fs_extra = "1.3.0"
thiserror = "2.0.9"
