[package]
name = "my-helper"
version = "0.1.0"
description = "batch file operation helper"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json_path = "0.7.1"
serde_json = { version = "1.0.134", features = ["preserve_order"] }
log = "0.4.22"
serde = { version = "1.0.216", features = ["derive"] }
env_logger = "0.11.6"
regex = "1.11.1"
fs_extra = "1.3.0"
thiserror = "2.0.9"
fuzzy-matcher = "0.3.7"
wasm-bindgen = "0.2.100"
