[package]
name = "my-helper"
version = "0.1.0"
authors = ["zhangchuachua <zchuachuax@gmail.com>"]
description = "我的批量文件操作 cli 工具"
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "1.0"
fs_extra = "1.3.0"
regex = "1.11.1"
serde_json_path = "0.7.2"
